registry/registry_auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: registry-auth-middleware
spec:
  basicAuth:
    secret: registry-auth
