registry/nexus_endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: external-service-nexus-ui
subsets:
  - addresses:
      - ip: 192.168.178.112
    ports:
      - port: 8081
