registry/registry_service.yml
kind: Service
apiVersion: v1
metadata:
  name: external-service-nexus-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
