registry/nexus_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: registry
spec:
  tls:
    - hosts:
        - nexus.lab.qstetten.de
      secretName: registry-cert
  rules:
    - host: "nexus.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-service-nexus-ui
                port:
                  number: 80

---
