registry/registry.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: docker-registry
spec:
  tls:
    - hosts:
        - docker.lab.qstetten.de
      secretName: docker-registry-cert
  rules:
    - host: "docker.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: registry-proxy-service
                port:
                  number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-proxy
  
  template:
    metadata:
      labels:
        app: registry-proxy
    
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config-volume
          configMap:
            name: registry-proxy-nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: registry-proxy-service
spec:
  selector:
    app: registry-proxy

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
